# PowerX-E

./: .gitignore  CMakeLists.txt  README.md
src/: cpu.h  cpu_state.c  cpu_state.h  emulator.c  emulator.h  instruction.c  instruction.h  main.c  memory.c  memory.h
